src/objects/Wage_Subsidy__c.object
<CustomObject>
    <fields>
        <fullName>EC__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EC</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Wage_Subsidies</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer__c</fullName>
        <label>Employer</label>
        <referenceTo>Business__c</referenceTo>
        <relationshipLabel>Wage Subsidies</relationshipLabel>
        <relationshipName>Wage_Subsidies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Job_Seeker__c</fullName>
        <label>Job Seeker</label>
        <referenceTo>Job_Seeker__c</referenceTo>
        <relationshipLabel>Wage Subsidies</relationshipLabel>
        <relationshipName>Wage_Subsidies</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Wage Subsidy</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WS{0000000}</displayFormat>
        <label>Wage Subsidy ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wage Subsidies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>